# nbgrader-jupyterquiz

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  Makefile  README.rst  TODO  environment-docs.yml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: bump-version.yml  cache-cleaner.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  label.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt
LICENSES/: jupyterquiz-MIT.txt
docs/: conf.py  display-options.rst  graded-quizzes.rst  index.rst  installation.rst  nbgrader-pipeline.rst  quiz-syntax.rst  releasing.rst  usage.rst
docs/examples/: nb1-geography.ipynb  nb2-python.ipynb  quiz_source_example.ipynb
src/nbgrader_jupyterquiz/: __init__.py  __main__.py
src/nbgrader_jupyterquiz/display/: __init__.py  styles.css
src/nbgrader_jupyterquiz/display/dynamic/: __init__.py  capture.py  display.py  loader.py  renderer.py
src/nbgrader_jupyterquiz/display/js/: async_suffix.js.tpl  helpers.js  multiple_choice.js  numeric.js  recorder.js  static_suffix.js.tpl  string.js
src/nbgrader_jupyterquiz/grader/: __init__.py  _review.py  _scoring.py  autograde.py  encode.py  parse.py  preprocessor.py  validate.py
src/nbgrader_jupyterquiz/interface/: cli_args.py  command_line.py
src/nbgrader_jupyterquiz/report_creation/: create_report.py  nbgrader_exporter.py  plotting.py  read_csv_results.py  report_writer.py
tests/: __init__.py  conftest.py  test_autograde.py  test_display.py  test_encode.py  test_parse.py  test_preprocessor.py  test_smoke.py  test_validate.py
tests/fixtures/example/: feedback_address_book.json  feedback_config.json  gradebook.db  nbgrader_config.py
tests/fixtures/example/autograded/0/example_task/: example_task.ipynb
tests/fixtures/example/autograded/1/example_task/: example_task.ipynb
tests/fixtures/example/feedback/0/example_task/: example_task.html
tests/fixtures/example/feedback/1/example_task/: example_task.html
tests/fixtures/example/release/example_task/: example_task.ipynb
tests/fixtures/example/source/example_task/: example_task.ipynb
tests/fixtures/example/submitted/0/example_task/: example_task.ipynb
tests/fixtures/example/submitted/1/example_task/: example_task.ipynb
