[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nbgrader_jupyterquiz"
authors = [
  {name = "Philipp Emmo Tobias Risius", email = "philipp.e.risius@theo.physik.uni-giessen.de"}
]
maintainers = [
  {name = "Philipp Emmo Tobias Risius", email = "philipp.e.risius@theo.physik.uni-giessen.de"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = ["nbgrader", "jupyterquiz", "education"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  "ipython",
  "jsonschema",
  "nbconvert",
  "nbformat",
  "nbgrader >=0.9",
  "traitlets"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "bump-my-version >=1.2.3",
  "coverage >=7.5.0",
  "deptry >=0.23.1",
  "flit >=3.12.0,<4.0",
  "mypy >=1.18.2",
  "numpydoc >=1.9.0",
  "pre-commit >=3.5.0",
  "pytest >=8.3.2",
  "pytest-cov >=5.0.0",
  "ruff >=0.13.3",
  "tox >=4.30.3",
  "vulture >=2.16"
]
docs = [
  # Documentation and examples
  "ipykernel",
  "ipython",
  "jupyter_client",
  "nbsphinx >=0.9.8",
  "sphinx >=8.1.3",
  "sphinx-autobuild",
  "sphinx-codeautolink >=0.17.5",
  "sphinx-copybutton",
  "sphinx-rtd-theme >=1.0"
]
all = ["nbgrader_jupyterquiz[dev]", "nbgrader_jupyterquiz[docs]"]

[project.urls]
# "Homepage" = "https://nbgrader-jupyterquiz.readthedocs.io/"
# "Changelog" = "https://nbgrader-jupyterquiz.readthedocs.io/en/stable/changelog.html"
"Issue tracker" = "https://github.com/PhilippRisius/nbgrader-jupyterquiz/issues"
"Source" = "https://github.com/PhilippRisius/nbgrader-jupyterquiz"

[tool]

[tool.bumpversion]
current_version = "0.2.0"
commit = true
commit_args = "--no-verify"
message = "Bump version: {current_version} → {new_version} [skip ci]"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/PhilippRisius/nbgrader-jupyterquiz>`_ (latest)
------------------------------------------------------------------------------
"""
replace = """\
..
    `Unreleased <https://github.com/PhilippRisius/nbgrader-jupyterquiz>`_ (latest)
    ------------------------------------------------------------------------------

    Contributors:

    Changes
    ^^^^^^^
    * No change.

    Fixes
    ^^^^^
    * No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/PhilippRisius/nbgrader-jupyterquiz/tree/v{new_version}>`_ ({now:%Y-%m-%d})
--------------------------------------------------------------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "src/nbgrader_jupyterquiz/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: \"{current_version}\""
replace = "version: \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
# "nd"/"ges" — German words in fixture HTML; "ths" — upstream JS variable name
# (shorthand for `this` in the forked jupyterquiz JavaScript).
ignore-words-list = "astroid,socio-economic,nd,ges,ths"

[tool.coverage.paths]
source = ["src/nbgrader_jupyterquiz/", "*/site-packages/nbgrader_jupyterquiz/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true
source = ["nbgrader_jupyterquiz"]

[tool.deptry]
extend_exclude = ["docs"]
pep621_dev_dependency_groups = ["all", "dev", "docs"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "LICENSES/",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "src/nbgrader_jupyterquiz",
  "tests/*.py",
  "tests/fixtures/",
  "tox.ini"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  ".zizmor.yml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/nbgrader_jupyterquiz*.rst",
  "docs/locales"
]

[tool.mypy]
files = "."
python_version = "3.10"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "no-untyped-call"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# nbgrader ships no stubs; relax type checking for grader modules that use it.
module = [
  "nbgrader_jupyterquiz.grader.preprocessor"
]
ignore_errors = true

[[tool.mypy.overrides]]
# display/ is a fork of upstream jupyterquiz which carries no type annotations.
module = [
  "nbgrader_jupyterquiz.display.*"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.fixtures.*"
ignore_errors = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--color=yes",
  "--verbose"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = [
  "tests"
]

[tool.ruff]
src = ["src"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs",
  "tests/fixtures"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401" # non-imperative-mood
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["nbgrader_jupyterquiz"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/nbgrader_jupyterquiz/**/__init__.py" = ["F401", "F403"]
# display/ is forked from upstream jupyterquiz; don't enforce security lints on
# patterns inherited from that codebase (assert, random div-id, urlopen).
"src/nbgrader_jupyterquiz/display/**" = ["S101", "S310", "S311"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/nbgrader_jupyterquiz", "tests"]
sort_by_size = true
